# rplayer

./: .gitignore  CMakeLists.txt  DebugView.qml  Icon.qml  Main.qml  README.md  TitleLabel.qml  VideoView.qml  fonticon.h  jsonreader.h  main.cpp
.github/workflows/: ios.yml
lib/QFontIcon/: qfonticon.cpp  qfonticon.h
platform/ios/: Info.plist
src/: fonticon.h  jsonreader.h  main.cpp  rplayerdatareader.h
src/platform/ios/: ios_idle_timer.mm
src/qml/: AboutView.qml  CommentItem.qml  CommentView.qml  DebugView.qml  Icon.qml  InfoView.qml  InputView.qml  Main.qml  MediaOutput.qml  ParticleEffect.qml  TitleLabel.qml  UserInfoView.qml  VideoPlayer.qml  VideoView.qml
tools/: build_data_json.sh  check_json.py  extract_data_json.py  generate_data_json.py  generate_image_data_json.py  generate_video_data_json.py  merge_data_json.py  remove_duplicates_userdata.py
